--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
+    "ion2-calendar": "^3.0.0-rc.0",
     "ionic": "^5.4.16",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -60,7 +62,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
