--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/barcode-scanner": "^5.22.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.25.0",
     "@ionic-native/qr-scanner": "^5.21.6",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -30,6 +31,8 @@
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
@@ -89,7 +92,8 @@
         "ANDROID_SUPPORT_VERSION": "26.+"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
