--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-fcm-with-dependecy-updated": "^6.3.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-sqlite-storage": "^4.0.0",
@@ -93,7 +95,8 @@
       },
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {}
     },
     "platforms": [
       "android"
